changed sql framework