@@ -1,15 +1,13 @@
 package de.primeapi.primeplugins.spigotapi.sql.clan;
 
 import de.primeapi.primeplugins.spigotapi.PrimeCore;
-import de.primeapi.primeplugins.spigotapi.sql.DatabaseTask;
 import de.primeapi.primeplugins.spigotapi.sql.SQLPlayer;
+import de.primeapi.util.sql.queries.Retriever;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -17,65 +15,59 @@ import java.util.stream.Collectors;
 public class SQLClanInvitation {
     final int id;
 
-    public static DatabaseTask<SQLClanInvitation> create(SQLPlayer player, SQLClan clan) {
-        return new DatabaseTask<>(CompletableFuture.supplyAsync(() -> {
-            Integer id = PrimeCore.getInstance().getDb().update("INSERT INTO prime_clan_requests value (id,?,?)")
-                    .parameters(player.retrieveUniqueId().complete().toString(), clan.getId())
-                    .returnGeneratedKeys()
-                    .getAs(Integer.class)
-                    .toBlocking().singleOrDefault(null);
-            if (id != null) {
-                return new SQLClanInvitation(id);
-            }
-            return null;
-        }));
+    public static Retriever<SQLClanInvitation> create(SQLPlayer player, SQLClan clan) {
+        return PrimeCore.getInstance().getDb().update("INSERT INTO prime_clan_requests value (id,?,?)")
+                        .parameters(player.retrieveUniqueId().complete().toString(), clan.getId())
+                        .returnGeneratedKeys(Integer.class)
+                        .get()
+                        .map(SQLClanInvitation::new);
     }
 
-    public static DatabaseTask<SQLClanInvitation> fromPlayer(SQLPlayer player, SQLClan clan) {
-        return new DatabaseTask<>(CompletableFuture.supplyAsync(() -> {
-            Integer id = PrimeCore.getInstance().getDb().select(
-                    "SELECT id FROM prime_clan_requests WHERE uuid = ? AND clan = ?"
-            ).parameters(player.retrieveUniqueId().complete().toString(), clan.getId())
-                    .getAs(Integer.class)
-                    .toBlocking().firstOrDefault(null);
-            if (id != null) {
-                return new SQLClanInvitation(id);
-            }
-            return null;
-        }));
+    public static Retriever<SQLClanInvitation> fromPlayer(SQLPlayer player, SQLClan clan) {
+        return PrimeCore.getInstance()
+                        .getDb()
+                        .select(
+                                "SELECT id FROM prime_clan_requests WHERE uuid = ? AND clan = ?"
+                               )
+                        .parameters(player.retrieveUniqueId().complete().toString(), clan.getId())
+                        .execute(Integer.class)
+                        .get()
+                        .map(SQLClanInvitation::new);
     }
 
-    public static DatabaseTask<List<SQLClanInvitation>> fromPlayer(SQLPlayer player) {
-        return new DatabaseTask<>(CompletableFuture.supplyAsync(() -> {
-            List<Integer> idList = PrimeCore.getInstance().getDb().select(
-                    "SELECT id FROM prime_clan_requests WHERE uuid=?"
-            ).parameters(player.retrieveUniqueId().complete().toString())
-                    .getAs(Integer.class)
-                    .toList().toBlocking().singleOrDefault(new ArrayList<>());
-            return idList.stream().map(SQLClanInvitation::new).collect(Collectors.toList());
-        }));
+    public static Retriever<List<SQLClanInvitation>> fromPlayer(SQLPlayer player) {
+        return PrimeCore.getInstance().getDb().select(
+                                "SELECT id FROM prime_clan_requests WHERE uuid=?"
+                                                           ).parameters(player.retrieveUniqueId().complete().toString())
+                        .execute(Integer.class)
+                        .getAsSet()
+                        .map(integers ->
+                                     integers.stream().map(SQLClanInvitation::new).collect(Collectors.toList())
+                            );
     }
 
-    private <T> DatabaseTask<T> readDatabase(String column, Class<T> type) {
-        return new DatabaseTask<>(CompletableFuture.supplyAsync(() -> PrimeCore.getInstance().getDb().select(
-                "SELECT " + column + " FROM prime_clan_requests WHERE id = ?"
-        )
-                .parameters(id).getAs(type).toBlocking().singleOrDefault(null)));
+    private <T> Retriever<T> readDatabase(String column, Class<T> type) {
+        return PrimeCore.getInstance().getDb().select(
+                                "SELECT " + column + " FROM prime_clan_requests WHERE id = ?"
+                                                           )
+                        .parameters(id)
+                        .execute(type)
+                        .get();
     }
 
 
-    public DatabaseTask<UUID> getUUID() {
-        return new DatabaseTask<>(CompletableFuture.supplyAsync(() -> UUID.fromString(readDatabase("uuid", String.class).complete())));
+    public Retriever<UUID> getUUID() {
+        return new Retriever<>(() -> UUID.fromString(readDatabase("uuid", String.class).complete()));
     }
 
-    public DatabaseTask<SQLClan> getClan() {
-        return new DatabaseTask<>(CompletableFuture.supplyAsync(() -> new SQLClan(readDatabase("clan", Integer.class).complete())));
+    public Retriever<SQLClan> getClan() {
+        return new Retriever<>(() -> new SQLClan(readDatabase("clan", Integer.class).complete()));
     }
 
 
     public void delete() {
         PrimeCore.getInstance().getDb().update("DELETE FROM prime_clan_requests WHERE id = ?")
-                .parameters(id).execute();
+                 .parameters(id).execute();
     }
 
 }
